att: estimativas para url

--- a/estatistica_2/Estimativas.ipynb
+++ b/estatistica_2/Estimativas.ipynb
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -245,22 +245,23 @@
       "Data columns (total 7 columns):\n",
       " #   Column          Non-Null Count  Dtype  \n",
       "---  ------          --------------  -----  \n",
-      " 0   UF              76840 non-null  int64  \n",
+      " 0   UF              76840 non-null  object \n",
       " 1   Sexo            76840 non-null  int64  \n",
       " 2   Idade           76840 non-null  int64  \n",
       " 3   Cor             76840 non-null  int64  \n",
-      " 4   Anos de Estudo  76840 non-null  int64  \n",
+      " 4   Anos.de.Estudo  76840 non-null  int64  \n",
       " 5   Renda           76840 non-null  int64  \n",
       " 6   Altura          76840 non-null  float64\n",
-      "dtypes: float64(1), int64(6)\n",
-      "memory usage: 4.1 MB\n"
+      "dtypes: float64(1), int64(5), object(1)\n",
+      "memory usage: 4.1+ MB\n"
      ]
     }
    ],
    "source": [
     "file = 'dados.csv'\n",
+    "url = \"https://raw.githubusercontent.com/alura-cursos/Estatisticas-Python-frequencias-medidas/refs/heads/main/dados/dados_desafio.csv\"\n",
     "\n",
-    "dados = pd.read_csv(file)\n",
+    "dados = pd.read_csv(url)\n",
     "dados.info()"
    ]
   },
@@ -309,128 +310,128 @@
        "      <th>Sexo</th>\n",
        "      <th>Idade</th>\n",
        "      <th>Cor</th>\n",
-       "      <th>Anos de Estudo</th>\n",
+       "      <th>Anos.de.Estudo</th>\n",
        "      <th>Renda</th>\n",
        "      <th>Altura</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>31507</th>\n",
-       "      <td>29</td>\n",
-       "      <td>1</td>\n",
-       "      <td>59</td>\n",
-       "      <td>8</td>\n",
-       "      <td>12</td>\n",
-       "      <td>788</td>\n",
-       "      <td>1.655108</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>63536</th>\n",
-       "      <td>43</td>\n",
+       "      <th>24479</th>\n",
+       "      <td>Alagoas</td>\n",
        "      <td>0</td>\n",
-       "      <td>46</td>\n",
-       "      <td>2</td>\n",
-       "      <td>16</td>\n",
-       "      <td>900</td>\n",
-       "      <td>1.751537</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49666</th>\n",
-       "      <td>35</td>\n",
-       "      <td>1</td>\n",
-       "      <td>42</td>\n",
-       "      <td>2</td>\n",
-       "      <td>14</td>\n",
-       "      <td>3000</td>\n",
-       "      <td>1.739906</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35860</th>\n",
        "      <td>31</td>\n",
-       "      <td>0</td>\n",
-       "      <td>39</td>\n",
        "      <td>2</td>\n",
        "      <td>9</td>\n",
-       "      <td>6000</td>\n",
-       "      <td>1.702010</td>\n",
+       "      <td>1200</td>\n",
+       "      <td>1.65</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>27708</th>\n",
-       "      <td>29</td>\n",
+       "      <th>19851</th>\n",
+       "      <td>Paraíba</td>\n",
        "      <td>0</td>\n",
-       "      <td>33</td>\n",
-       "      <td>4</td>\n",
-       "      <td>12</td>\n",
-       "      <td>788</td>\n",
-       "      <td>1.747012</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>700</td>\n",
+       "      <td>1.68</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>58532</th>\n",
-       "      <td>41</td>\n",
+       "      <th>74110</th>\n",
+       "      <td>Goiás</td>\n",
+       "      <td>0</td>\n",
+       "      <td>52</td>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2500</td>\n",
+       "      <td>1.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42025</th>\n",
+       "      <td>Rio de Janeiro</td>\n",
+       "      <td>1</td>\n",
+       "      <td>62</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>600</td>\n",
+       "      <td>1.71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4142</th>\n",
+       "      <td>Amazonas</td>\n",
        "      <td>0</td>\n",
        "      <td>44</td>\n",
        "      <td>8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>80</td>\n",
-       "      <td>1.632936</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16483</th>\n",
-       "      <td>23</td>\n",
-       "      <td>1</td>\n",
-       "      <td>40</td>\n",
-       "      <td>8</td>\n",
        "      <td>12</td>\n",
-       "      <td>815</td>\n",
-       "      <td>1.614676</td>\n",
+       "      <td>300</td>\n",
+       "      <td>1.86</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>33350</th>\n",
-       "      <td>31</td>\n",
-       "      <td>1</td>\n",
-       "      <td>27</td>\n",
-       "      <td>2</td>\n",
-       "      <td>16</td>\n",
-       "      <td>1800</td>\n",
-       "      <td>1.700349</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>53853</th>\n",
-       "      <td>35</td>\n",
+       "      <th>13290</th>\n",
+       "      <td>Piauí</td>\n",
        "      <td>0</td>\n",
-       "      <td>59</td>\n",
+       "      <td>50</td>\n",
        "      <td>8</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1500</td>\n",
-       "      <td>1.564374</td>\n",
+       "      <td>3</td>\n",
+       "      <td>600</td>\n",
+       "      <td>1.83</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28689</th>\n",
-       "      <td>29</td>\n",
-       "      <td>1</td>\n",
-       "      <td>45</td>\n",
-       "      <td>6</td>\n",
+       "      <th>44567</th>\n",
+       "      <td>Rio de Janeiro</td>\n",
+       "      <td>0</td>\n",
+       "      <td>54</td>\n",
+       "      <td>8</td>\n",
+       "      <td>13</td>\n",
+       "      <td>800</td>\n",
+       "      <td>1.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14420</th>\n",
+       "      <td>Piauí</td>\n",
+       "      <td>0</td>\n",
+       "      <td>46</td>\n",
+       "      <td>8</td>\n",
        "      <td>16</td>\n",
-       "      <td>3500</td>\n",
-       "      <td>1.745667</td>\n",
+       "      <td>2500</td>\n",
+       "      <td>1.72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13607</th>\n",
+       "      <td>Piauí</td>\n",
+       "      <td>0</td>\n",
+       "      <td>21</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>500</td>\n",
+       "      <td>1.73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58637</th>\n",
+       "      <td>Paraná</td>\n",
+       "      <td>0</td>\n",
+       "      <td>58</td>\n",
+       "      <td>8</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2300</td>\n",
+       "      <td>1.80</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       UF  Sexo  Idade  Cor  Anos de Estudo  Renda    Altura\n",
-       "31507  29     1     59    8              12    788  1.655108\n",
-       "63536  43     0     46    2              16    900  1.751537\n",
-       "49666  35     1     42    2              14   3000  1.739906\n",
-       "35860  31     0     39    2               9   6000  1.702010\n",
-       "27708  29     0     33    4              12    788  1.747012\n",
-       "58532  41     0     44    8               1     80  1.632936\n",
-       "16483  23     1     40    8              12    815  1.614676\n",
-       "33350  31     1     27    2              16   1800  1.700349\n",
-       "53853  35     0     59    8               5   1500  1.564374\n",
-       "28689  29     1     45    6              16   3500  1.745667"
+       "                   UF  Sexo  Idade  Cor  Anos.de.Estudo  Renda  Altura\n",
+       "24479         Alagoas     0     31    2               9   1200    1.65\n",
+       "19851         Paraíba     0     20    2              10    700    1.68\n",
+       "74110           Goiás     0     52    8               9   2500    1.80\n",
+       "42025  Rio de Janeiro     1     62    2               6    600    1.71\n",
+       "4142         Amazonas     0     44    8              12    300    1.86\n",
+       "13290           Piauí     0     50    8               3    600    1.83\n",
+       "44567  Rio de Janeiro     0     54    8              13    800    1.83\n",
+       "14420           Piauí     0     46    8              16   2500    1.72\n",
+       "13607           Piauí     0     21    2               9    500    1.73\n",
+       "58637          Paraná     0     58    8              11   2300    1.80"
       ]
      },
      "execution_count": 3,
@@ -478,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -498,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -575,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -588,7 +589,7 @@
        "375"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -691,7 +692,7 @@
        "Name: Renda, Length: 200, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -703,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -716,7 +717,7 @@
        "np.float64(1964.205)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -740,7 +741,7 @@
        "np.float64(3139.8855167452093)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -761,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 10,
    "metadata": {
     "colab": {},
     "colab_type": "code",
