--- a/estatistica_2/Curso_de_Estatística_Parte_2.ipynb
+++ b/estatistica_2/Curso_de_Estatística_Parte_2.ipynb
@@ -8926,7 +8926,7 @@
    "version": "0.3.2"
   },
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.11.2)",
    "language": "python",
    "name": "python3"
   },
