--- a/estatistica_ML/Aula_04_Desafios.ipynb
+++ b/estatistica_ML/Aula_04_Desafios.ipynb
@@ -5565,7 +5565,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.11.2)",
    "language": "python",
    "name": "python3"
   },
